themes/global-governance-lab-theme/static/css/main.css
/* ... */
/* ==========================================================================
   Global Governance Lab Theme Colour Styles
   ========================================================================== */
 
.bg-light-blue { 
    background-color: #2BACE2   !important;
}
.bg-dark-blue { 
    background-color: #3A6EB6   !important;
}
.bg-light-yellow { 
    background-color: #fff5e2  !important;
}
.bg-yellow { 
    background-color: #FCB216   !important;
}
.bg-green { 
    background-color: #70B243   !important;
} 
.bg-dark-green { 
    background-color: #466f2a   !important;
} 


.text-light-blue { 
    color: #2BACE2   !important;
}
.text-dark-blue { 
    color: #3A6EB6   !important;
}
.text-yellow { 
    color: #FCB216   !important;
}
.text-green { 
    color: #70B243   !important;
}




/* ==========================================================================
   Utility classes
   ========================================================================== */

.font-size-r1-1 {font-size: 1.1rem;}
.font-size-r1-2 {font-size: 1.2rem;}
.font-size-r1-3 {font-size: 1.3rem;}
.font-size-r1-4 {font-size: 1.4rem;}
.font-size-r1-5 {font-size: 1.5rem;}
.font-size-r1-6 {font-size: 1.6rem;}
.font-size-r1-7 {font-size: 1.7rem;}
.font-size-r1-8 {font-size: 1.8rem;}
.font-size-r1-9 {font-size: 1.9rem;}
.font-size-r2-0 {font-size: 2.0rem;}


.display-1 {
    font-size: 2.5rem !important;
    font-weight: 700 !important;
}
.display-2 {
    font-size: 3.0rem !important;
    font-weight: 700 !important;
}
.display-3 {
    font-size: 2.5rem !important;
    font-weight: 700 !important;
}
.display-4 {
    font-size: 2.0rem !important;
    font-weight: 700 !important;
}
  
  
@media (min-width: 576px) { 
    /* This is what you see on desktop */ 
    .display-1 {
        font-size: 5rem !important;
        font-weight: 600 !important;
    }
    .display-2 {
        font-size: 4.5rem !important;
        font-weight: 600 !important;
    }
    .display-3 {
        font-size: 4.0rem !important;
        font-weight: 600 !important;
    }
    .display-4 {
        font-size: 3.5rem !important;
        font-weight: 600 !important;
    }

}
  
  
 

/* ==========================================================================
   SVG Icons - svgicons.sparkk.fr
   ========================================================================== */
.svg-icon {
    width: 1em;
    height: 1em;
}

.svg-icon path,
.svg-icon polygon,
.svg-icon rect {
    fill: #ffffff;
}

.svg-icon circle {
    stroke: #4691f6;
    stroke-width: 1;
}



/* ==========================================================================
   Helper classes
   ========================================================================== */

/*
 * Hide visually and from screen readers
 */

.hidden {
    display: none !important;
}

/*
 * Hide only visually, but have it available for screen readers:
 * https://snook.ca/archives/html_and_css/hiding-content-for-accessibility
 *
 * 1. For long content, line feeds are not interpreted as spaces and small width
 *    causes content to wrap 1 word per line:
 *    https://medium.com/@jessebeach/beware-smushed-off-screen-accessible-text-5952a4c2cbfe
 */

.visuallyhidden {
    border: 0;
    clip: rect(0 0 0 0);
    height: 1px;
    margin: -1px;
    overflow: hidden;
    padding: 0;
    position: absolute;
    width: 1px;
    white-space: nowrap; /* 1 */
}

/*
 * Extends the .visuallyhidden class to allow the element
 * to be focusable when navigated to via the keyboard:
 * https://www.drupal.org/node/897638
 */

.visuallyhidden.focusable:active,
.visuallyhidden.focusable:focus {
    clip: auto;
    height: auto;
    margin: 0;
    overflow: visible;
    position: static;
    width: auto;
    white-space: inherit;
}

/*
 * Hide visually and from screen readers, but maintain layout
 */

.invisible {
    visibility: hidden;
}

/*
 * Clearfix: contain floats
 *
 * For modern browsers
 * 1. The space content is one way to avoid an Opera bug when the
 *    `contenteditable` attribute is included anywhere else in the document.
 *    Otherwise it causes space to appear at the top and bottom of elements
 *    that receive the `clearfix` class.
 * 2. The use of `table` rather than `block` is only necessary if using
 *    `:before` to contain the top-margins of child elements.
 */

.clearfix:before,
.clearfix:after {
    content: " "; /* 1 */
    display: table; /* 2 */
}

.clearfix:after {
    clear: both;
}

/* ==========================================================================
   EXAMPLE Media Queries for Responsive Design.
   These examples override the primary ('mobile first') styles.
   Modify as content requires.
   ========================================================================== */

@media only screen and (min-width: 35em) {
    /* Style adjustments for viewports that meet the condition */
}

@media print,
       (-webkit-min-device-pixel-ratio: 1.25),
       (min-resolution: 1.25dppx),
       (min-resolution: 120dpi) {
    /* Style adjustments for high resolution devices */
}
/* ... */

